fix(alerts): ensure additional content won't overlap icon or button in IE11

--- a/scss/_alert.scss
+++ b/scss/_alert.scss
@@ -43,6 +43,9 @@
   margin: -#{map-get($spacers, 1) / 5} 0;
 
   + * {
+    // @note: should be flex-basis but IE11 doesn't handle calc() in flex…
+    // stylelint-disable-next-line function-blacklist
+    max-width: calc(100% - (3rem + #{$alert-padding-x * 2} + #{$alert-close-icon-size}));
     margin: $alert-icon-margin-y 0;
   }
 
